# bitzer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  config.h.cmake
cmake/: FindBison.cmake  FindFlex.cmake
conf/: bitzer.conf  example.conf
parser/: tasks.l  tasks.y
src/: CMakeLists.txt  alloc.c  alloc.h  bitzer.h  conf.c  conf.h  conf_gram.y  conf_scan.l  context.c  context.h  event.h  list.h  log.c  log.h  main.c  rbtree.c  rbtree.h  sighandler.c  sighandler.h  strutil.c  strutil.h  task.c  task.h  util.h
